--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="line"></div>
+	<div id="line" style="width:200px"></div>
 	
     <script type="text/javascript" src="./script.js">
 </script>
